<resources>
    <string name="app_name">Shopping List</string>
    <string name="active">Active</string>
    <string name="archived">Archival</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="products">Products:</string>
    <string name="add_product">Add product</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="new_product">New product</string>
    <string name="this_product_already_exists">This product already exists</string>
    <string name="there_is_no_products">There is no products!</string>
    <string name="select_product">Select product:</string>
    <string name="status">Status</string>
    <string name="archive">Archive</string>
    <string name="edit">Edit</string>
</resources>
