<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_list_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/add_list_products_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/add_list_name_edit_text"/>

    <ListView
        android:id="@+id/add_list_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/add_list_save_btn"
        app:layout_constraintTop_toBottomOf="@id/add_list_products_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_list_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_list_add_product_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_list_add_product_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_list_save_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>