<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/main_fragment_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/extra_light_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/main_fragment_active_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/main_fragment_archival_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/archived" />
    </RadioGroup>

    <ListView
        android:id="@+id/main_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_fragment_radio_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_fragment_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="1dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>