<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/list_details_name_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/list_details_name_txt"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/list_details_name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/list_details_name_description"
        app:layout_constraintBottom_toBottomOf="@id/list_details_name_description"
        app:layout_constraintStart_toEndOf="@id/list_details_name_description"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/list_details_status_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/list_details_status_txt"
        app:layout_constraintTop_toBottomOf="@id/list_details_name_description"/>

    <TextView
        android:id="@+id/list_details_status_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/list_details_status_description"
        app:layout_constraintBottom_toBottomOf="@id/list_details_status_description"
        app:layout_constraintStart_toEndOf="@id/list_details_status_description"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/list_details_products_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/list_details_status_description"
        app:layout_constraintBottom_toTopOf="@id/list_details_archive_btn"/>


    <Button
        android:id="@+id/list_details_archive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/list_details_edit_btn"/>

    <Button
        android:id="@+id/list_details_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_details_archive_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>